# amplify

./: .env.example  .gitignore  CLAUDE.md  README.md  railway.toml
.claude/: launch.json
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
apps/api/: .gitignore  config.py  deps.py  eample.env  main.py  pyproject.toml
apps/api/agents/: clarification.py  content_generation.py  graph.py  research.py  supervisor.py
apps/api/middleware/: auth.py
apps/api/models/: chat.py  content.py  ephemeral.py  errors.py  research.py
apps/api/prisma/: README.md  schema.prisma
apps/api/routers/: chat.py  content.py  conversations.py
apps/api/services/: brief_store.py  content_store.py  conversation_store.py  failures.py  image_store.py  inflight_lock.py  llm_router.py  rate_limit.py  resume_bus.py  tracing.py
apps/api/sse/: events.py  sink.py  transform.py
apps/api/tests/: conftest.py
apps/api/tests/contract/: test_intelligence_brief_schema.py  test_rest_endpoints_schema.py  test_sse_events_schema.py
apps/api/tests/evals/: langsmith_nightly.md
apps/api/tests/integration/: _fakes.py  test_anti_hallucination_gate.py  test_clarification_flow.py  test_conversation_persistence.py  test_failure_budget_exceeded.py  test_failure_llm_invalid_output.py  test_failure_no_findings.py  test_failure_prestream_bootstrap.py  test_failure_rate_limited.py  test_failure_tavily_unavailable.py  test_followup_reuses_brief.py  test_happy_path_research.py  test_resume_inflight.py
apps/api/tests/unit/: test_copy_length.py  test_row_level_isolation.py  test_source_confidence_rules.py  test_variant_diversity.py  test_zero_silent_failures.py
apps/api/tools/: generate_copy.py  generate_image.py  tavily_search.py
apps/api/workers/: content_tasks.py  diversity.py
apps/web/: example.env  package.json  playwright.config.ts  (+1 more)
docs/: ADR-Amplify.md  PRD-Amplify.md  SAD-Amplify.md
(+69 files in other folders)
