[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arq>=0.27.0",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "langsmith>=0.7.30",
    "motor>=3.7.1",
    "prisma>=0.15.0",
    "pydantic>=2",
    "redis>=5.3.1",
    "tavily-python>=0.7.23",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["db/prisma/generated", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
